--- a/src/app/topo/topo.component.html
+++ b/src/app/topo/topo.component.html
@@ -1,1 +1,3 @@
-<p>Esse é o componente topo</p>
+<nav class="navbar navbar-light bg-faded">
+    <span class="navbar-brand mb-0 h1">English Game</span>
+  </nav>
