--- a/src/app/tentativas/tentativas.component.html
+++ b/src/app/tentativas/tentativas.component.html
@@ -1,1 +1,7 @@
-<p>tentativas works!</p>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+      <i class="material-icons md-36">favorite_border</i> 
+      <i class="material-icons md-36">favorite</i> 
+      <i class="material-icons md-36">favorite</i>
+
+    
