--- a/src/app/topo/topo.component.css
+++ b/src/app/topo/topo.component.css
@@ -1,5 +1,5 @@
 .navbar {
-    background: rgb(163, 163, 163);
-    background-color: rgb(163, 163, 163);
+    background: #dd65f7;
+    background-color: #dd65f7;
     font-size: 25px;
 }
