--- a/src/app/topo/topo.component.html
+++ b/src/app/topo/topo.component.html
@@ -1,3 +1,3 @@
 <nav class="navbar navbar-light bg-faded">
-    <span class="navbar-brand mb-0 h1">English Game</span>
+    <span class="navbar-brand mb-0 h1">{{ Titulo }}</span>
   </nav>
