--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<button (click)="openDialog()" class="btn btn-primary">Imprimir boas vindas</button>
 <app-topo></app-topo>
 <div *ngIf="jogoEmAndamento; else fimDeJogo">
     <app-painel (encerrarJogo)="encerrarJogo($event)"></app-painel>
