--- a/src/app/boas-vindas/boas-vindas.component.css
+++ b/src/app/boas-vindas/boas-vindas.component.css
@@ -1,3 +1,14 @@
 .container{
-    background-color: red;
+    background-color: white;
+    border-top: 0px;
+
+}
+.col{
+    color: black;
+}
+.dialogref{
+    border-top: 0px;
+}
+.btn.btn-primary{
+    border-radius: 0px;
 }
