--- a/src/app/topo/topo.component.css
+++ b/src/app/topo/topo.component.css
@@ -1,5 +1,7 @@
 .navbar {
-    background: #dd65f7;
-    background-color: #dd65f7;
-    font-size: 25px;
+    background: #5d4187;
+    background-color: #5d4187;
+    font-size: 35px;
+    padding: 15px;
 }
+
