--- a/src/app/painel/painel.component.html
+++ b/src/app/painel/painel.component.html
@@ -14,9 +14,9 @@
         <div class="row">
             <div class="col">
                 <h6>{{ instrucao }}</h6>
-                <p>{{rodadaFrase.fraseEng}}</p>
+                <p><b>{{rodadaFrase.fraseEng}}</b></p>
                 <div class="form-group">
-                    <textarea 
+                    <textarea
                     class="form-control"
                     rows="3"
                     (input)="atualizaResposta($event)"
@@ -28,8 +28,8 @@
         <div class="row">
             <div class="button">
                 <div class="d-flex justify-content-end">
-                <button 
-                type="button" 
+                <button
+                type="button"
                 class="btn btn-primary"
                 (click)="verificarResposta()"
                 >Verificar</button>
